--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
 /* =================================== */
 /*  Basic Style 
 /* =================================== */
+
 ::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
   color: #cccccc;
@@ -700,6 +701,11 @@ td, th {
   top: 0;
   bottom: 0;
 }
+
+#particle-js {
+
+}
+.js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
 
 .container.fullwidth {
   width: 100%;
